[shangwei] #N/A optimize Jenkinsfile
(cherry picked from commit daa4b32f48696a7679ecdd1bb3e888725036704a)